Location container added

--- a/Travel.html
+++ b/Travel.html
@@ -233,12 +233,21 @@
             </div>
         </div>
         <div class="location">
-            <div class="location-description">
+            <div class="location-description pl-5">
                 <h2>Our Location</h2>
-                <h4>Hotel is located in the very heart of the city, close to the charming and picturesque Krakow Old Town is one of the best advantages of Amber Boutique Hotels.</h4>
+                <h5 class="mt-4">Hotel is located in the very heart of the city, close to the charming and picturesque
+                    Krakow Old Town is one of the best advantages of Amber Boutique Hotels. As one of a very few
+                    facilities in
+                    Krakow, we can be proud of our
+                    excellent location in a quiet street
+                    and, at the same time, in the very
+                    heart of the Old Town.</h5>
             </div>
             <div class="location-image">
-
+                <div class="text">
+                    <span>Lago di Garda</span>
+                    <span>45°38′N 10°40′E</span>
+                </div>
             </div>
         </div>
     </main>
