Cloud footer & template ver 1 done

--- a/Travel.html
+++ b/Travel.html
@@ -251,6 +251,12 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div class="white-transition"></div>
+        <img src="./assets/img/cloud.png" alt="">
+        <img src="./assets/img/cloud.png" alt=""> 
+        <img src="./assets/img/cloud3.png" alt="">
+    </footer>
 </body>
 
 <script defer>
