Object position & social media added

--- a/Travel.html
+++ b/Travel.html
@@ -233,7 +233,14 @@
             </div>
         </div>
         <div class="location">
-            <div class="location-description pl-5">
+            
+            <div class="location-image">
+                <div class="text">
+                    <span>Lago di Garda</span>
+                    <span>45°38′N 10°40′E</span>
+                </div>
+            </div>
+            <div class="location-description ml-5 pl-5">
                 <h2>Our Location</h2>
                 <h5 class="mt-4">Hotel is located in the very heart of the city, close to the charming and picturesque
                     Krakow Old Town is one of the best advantages of Amber Boutique Hotels. As one of a very few
@@ -243,19 +250,19 @@
                     and, at the same time, in the very
                     heart of the Old Town.</h5>
             </div>
-            <div class="location-image">
-                <div class="text">
-                    <span>Lago di Garda</span>
-                    <span>45°38′N 10°40′E</span>
-                </div>
-            </div>
         </div>
     </main>
     <footer>
         <div class="white-transition"></div>
-        <img src="./assets/img/cloud.png" alt="">
-        <img src="./assets/img/cloud.png" alt=""> 
-        <img src="./assets/img/cloud3.png" alt="">
+        <img src="./assets/img/cloud.png" alt="" class="clouds">
+        <img src="./assets/img/cloud.png" alt="" class="clouds"> 
+        <img src="./assets/img/cloud3.png" alt="" class="clouds">
+        <div class="social-media">
+            <img src="./assets/img/icons/twitter.png" alt="" class="logo">
+            <img src="./assets/img/icons/github.png" alt="" class="logo">
+            <img src="./assets/img/icons/instagram.png" alt="" class="logo">
+            <img src="./assets/img/icons/whatsapp.png" alt="" class="logo">
+        </div>
     </footer>
 </body>
 
