--- a/Travel.html
+++ b/Travel.html
@@ -258,10 +258,13 @@
         <img src="./assets/img/cloud.png" alt="" class="clouds"> 
         <img src="./assets/img/cloud3.png" alt="" class="clouds">
         <div class="social-media">
-            <img src="./assets/img/icons/twitter.png" alt="" class="logo">
-            <img src="./assets/img/icons/github.png" alt="" class="logo">
-            <img src="./assets/img/icons/instagram.png" alt="" class="logo">
-            <img src="./assets/img/icons/whatsapp.png" alt="" class="logo">
+            <div class="icon-box pt-3 pb-3 mb-4">
+                <img src="./assets/img/icons/twitter.png" alt="" class="logo">
+                <img src="./assets/img/icons/github.png" alt="" class="logo">
+                <img src="./assets/img/icons/instagram.png" alt="" class="logo">
+                <img src="./assets/img/icons/whatsapp.png" alt="" class="logo">
+            </div>
+            
         </div>
     </footer>
 </body>
